--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-@font-face {
+body {
+    
+    padding: 20px;
+  }
+  @font-face {
     font-family: QuicktypeCondenced;
     src: url("QuickTypeCondensedRegular.ttf"); }
     @font-face {
       font-family: QuickCondencedBold;
       src: url("QuickTypeCondensedBold.ttf"); }
       @font-face {
-        font-family: ArialRegular; 
+        font-family: ArialRegular;
         src: url("Arial.ttf"); }  
         @font-face {
           font-family: QuickType;
@@ -14,204 +18,220 @@
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box; }
-      
-  body{
-    font-family: Quicktype;
-    max-height: 2033px;
-    max-width: 1920px;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    margin:0;
-  }
-  .container1{
-    padding-top: 195px;
-   max-width: 1920px;
-   height: 1080px;
-   display: block;
-  }
-  .container1 .signinform{
-width: 530.5px;
-height: 486.49px;
-margin:auto;
-border:1px solid #FC5400;
-border-radius: 0% 0% 2% 2%;
-margin-bottom: 120px;
-  }
-  .container1 .signinform form .toplogo{
-    height: 91px;
-    width: 100%;
-    background-color:#FC5300 ;
-  }
-  .person{
-    position: absolute;
-    right:35px;
-    top: 23px;
-  }
-  .lock{
-    right:35px;
-    position: absolute;
-    top: 122px;
-  }
-  .line2{
-    position: absolute;
-    top: 62px;
-    right: 35px;
-  }
-  .line1{
-    position: absolute;
-    top: 148px;
-    right: 35px;
-  }
-  #email{
-padding: 50px 20px 20px 10px;
-margin: 40px auto 0;
-width: 480px;
-height:70px;
-display:flex;
-justify-content:center;
-align-items:center;
-border-radius: 5px;
-border: 1px solid #C1C0C0;
-font-family: QuickCondencedBold;
-    font-size: 19px;
-color: #363637!important;
-  }
-  .inpts{
-    position: relative;
-    
-  }
-  .inpspass{
-    padding-bottom: 30px;
-  }
-  .buttonsubm{
-    width: 143px;
-    height: 40px;
-    font-family: QuickCondencedBold;
-    font-size: 20px;
-    border-radius: 5px;
-    background-color:#FF5300 ;
-    border: none;
-    text-align: center;
-    color: white;
-    margin-top: 80px;
-    margin-bottom: 40px;
-    margin: auto;
-    display:flex;justify-content:center;align-items:center;
-  }
-  #password{
-    padding: 45px 20px 10px 10px;
-    height:70px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width: 480px;
-    border: 1px solid #C1C0C0;
-    margin: 15px auto 0;
-    border-radius: 3%;
-    font-family: QuickCondencedBold;
-    font-size: 19px;
-        color: #363637;
-  }
-  .toplogo .wholescrap span{
-    color: white;
-    font-family: QuickCondencedBold;
-    font-size: 25px;
-    padding-left: 40px;
-  }
-
-  .wholescrap{
-    border-bottom: 1px solid rgb(196, 191, 191);
-    padding:45px 0 5px 20px;
-    height: 85px;
-  }
-  #subm{
-    background-color: #363637;
-    padding-top: 0px;
-    color: white;
-    height:70px;
-    display:flex;
-    justify-content:center;
-    font-family: QuickCondencedBold;
-    font-size: 19px;
-    align-items:center;
-    width: 480px;
-    margin:  auto auto 50px auto ;
-    border: none;
-  }
-  .registernew{
-    margin-bottom: 0px;
-    cursor: pointer;
-  }
-  .register-reset{
-    display: flex;
-    justify-content: space-between;
-    margin: 55px 25px 0 25px;
-    font-family: QuickCondencedBold;
-    font-size: 19px;
-    color: #363637;
-  }
-  .register-reset a{
-    text-decoration: none;
-    color: #363637;
-  }
-  .contactinfo{
-    width: 986px;
-    height: 172px;
-    font-family: QuickCondencedBold;
-    font-size: 20px;
-    line-height: 1.5;
-  }
-  .container2{
-    max-width: 1920px;
-    max-height:  2033px;
-    margin-top: 190px;
-    display: none;
-    padding-bottom: 60px;
-  }
-  .create{
-    margin: auto;
+        .container1{
+            padding-top: 195px;
+           width: 986px;
+           height: 1080px;
+           display: block;
+           position: relative;
+           left: 50%;
+           top: 50%;
+           -webkit-transform: translate3d(-50%, 0,0);
+                   transform: translate3d(-50%, 0,0);
+           -webkit-transform-origin: center top;
+                   transform-origin: center top;
+          }
+          .signinform{
+            width: 530.5px;
+            height: 486.49px;
+            margin:auto;
+            border:1px solid #FC5400;
+            border-radius: 0% 0% 2% 2%;
+            margin-bottom: 120px;
+              }
+              .signinform form .toplogo{
+                height: 91px;
+                width: 100%;
+                background-color:#FC5300 ;
+              }
+              .person{
+                position: absolute;
+                right:35px;
+                top: 23px;
+              }
+              .lock{
+                right:35px;
+                position: absolute;
+                top: 122px;
+              }
+              .line2{
+                position: absolute;
+                top: 62px;
+                right: 35px;
+              }
+              .line1{
+                position: absolute;
+                top: 148px;
+                right: 35px;
+              }
+              #email{
+            padding: 50px 20px 20px 10px;
+            margin: 40px auto 0;
+            width: 480px;
+            height:70px;
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            border-radius: 5px;
+            border: 1px solid #C1C0C0;
+            font-family: QuickCondencedBold;
+                font-size: 19px;
+            color: #363637!important;
+              }
+              .inpts{
+                position: relative;
+                
+              }
+              .inpspass{
+                padding-bottom: 30px;
+              }
+              .buttonsubm{
+                width: 143px;
+                height: 40px;
+                font-family: QuickCondencedBold;
+                font-size: 20px;
+                border-radius: 5px;
+                background-color:#FF5300 ;
+                border: none;
+                text-align: center;
+                color: white;
+                margin-top: 80px;
+                margin-bottom: 40px;
+                margin: auto;
+                display:flex;justify-content:center;align-items:center;
+              }
+              #password{
+                padding: 45px 20px 10px 10px;
+                height:70px;
+                display:flex;
+                justify-content:center;
+                align-items:center;
+                width: 480px;
+                border: 1px solid #C1C0C0;
+                margin: 15px auto 0;
+                border-radius: 3%;
+                font-family: QuickCondencedBold;
+                font-size: 19px;
+                    color: #363637;
+              }
+              .toplogo .wholescrap span{
+                color: white;
+                font-family: QuickCondencedBold;
+                /* font-weight: bold; */
+                font-size: 23px;
+                padding-left: 30px;
+              }
+            
+              .wholescrap{
+                border-bottom: 1px solid rgb(196, 191, 191);
+                padding:45px 0 5px 20px;
+                height: 85px;
+              }
+              #subm{
+                background-color: #363637;
+                padding-top: 0px;
+                color: white;
+                height:70px;
+                display:flex;
+                justify-content:center;
+                font-family: QuickCondencedBold;
+                font-size: 19px;
+                align-items:center;
+                width: 480px;
+                margin:  auto ;
+              }
+              .registernew{
+                margin-bottom: 0px;
+                cursor: pointer;
+              }
+              .register-reset{
+                display: flex;
+                justify-content: space-between;
+                margin: 55px 25px 0 25px;
+                font-family: QuickCondencedBold;
+                font-size: 19px;
+                color: #363637;
+              }
+              .register-reset a{
+                text-decoration: none;
+                color: #363637;
+              }
+              .contactinfo{
+                width: 986px;
+                height: 172px;
+                font-family: QuickCondencedBold;
+                font-size: 20px;
+                line-height: 1.5;
+              }
+             .container2{
+              display: none;
+             }
+  .create {
     width: 996px;
     height: 830px;
     padding: 20px 25px 45px 30px;
     border: 2px solid #c4c4c4;
-   
+    margin-top: 190px;
+    background: white;
+    position: relative;
+
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate3d(-50%, 0,0);
+            transform: translate3d(-50%, 0,0);
+    -webkit-transform-origin: center top;
+            transform-origin: center top;
   }
-.topl{
-  display: flex;
-  justify-content: space-between;
-}
-.container2 input{
-  width: 360px;
-  height: 50px;
-  border: 1px solid #ADADAD;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  padding: 20px;
-  color: black;
-  font-family: ArialRegular;
-  font-size: 14px;
-}
-.code{
-width: 163px!important;
-margin-right: 0!important;
-}
-.create h4{
-    margin: 0;
-}
-.scrimg{
-  margin-right: 250px;
-}
-#cancel{
-  cursor: pointer;
-}
-.topl h4{
-  font-family: QuickType;
-  font-size: 27px;
-  line-height: 2;
-  font-stretch:condensed;
-  font-weight: bold;
-  color: #707070;
-}
+  .topl{
+    display: flex;
+    justify-content: space-between;
+  }
+  input{
+    width: 360px;
+    height: 50px;
+    border: 1px solid #ADADAD;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    
+    padding: 2px 20px;
+    color: black;
+    font-family: ArialRegular;
+    font-size: 14px;
+  }
+  .code{
+    width: 163px!important;
+    margin-right: 0!important;
+    }
+    .create h4{
+        margin: 0;
+    }
+    .scrimg{
+        margin-right: 250px;
+      }
+      #cancel{
+        cursor: pointer;
+      }
+      .topl h4{
+        font-family: QuickType;
+        font-size: 27px;
+        line-height: 2;
+        font-stretch:condensed;
+        font-weight: bold;
+        color: #707070;
+      }
+      .buttonsubm{
+        width: 143px;
+        height: 40px;
+        font-family: QuickCondencedBold;
+        font-size: 20px;
+        border-radius: 5px;
+        background-color:#FF5300 ;
+        border: none;
+        text-align: center;
+        color: white;
+        margin-top: 80px;
+        margin-bottom: 40px;
+        margin: auto;
+        display:flex;justify-content:center;align-items:center;
+      }
